# Gabi

./: .env.example  .gcp-project  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AGNO_ECOSYSTEM.md  CHANGELOG.md  DEPLOY_SUMMARY.md  DEPLOY_VPS.md  DEVELOPMENT.md  NEXT_STEPS.md  PRIORITIES.md  PRODUCTION_DEPLOY.md  README.md  REPOSITORIES.md  chat_app.js  cloudbuild-ingest-job.yaml  cloudbuild-prod.yaml  cloudbuild-staging.yaml  cloudbuild-web.yaml  cloudbuild.yaml  deploy_vps_script.sh  docker-compose.complete.yml  docker-compose.dev-optimized.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod-simple.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  env.production.example  fix_role.sh  ingest_app.py  package.json  pr1.json  prs_all.json
api/: .dockerignore  .env.example  API.md  Dockerfile  alembic.ini  entrypoint-job.sh  entrypoint.sh  env.example  promo.py  pyproject.toml  requirements-dev.txt  ruff.toml
api/alembic/: env.py
api/app/: __init__.py  config.py  database.py  main.py
api/prompts/: regulatory_system_prompt.md
api/scripts/: __init__.py  backfill_provision_embeddings.py  bkj_cli.py  db_stats.py  ingest_all.py  ingest_all_agencies.py  ingest_all_integrated.py  ingest_aneel.py  ingest_anpd.py  ingest_ans.py  ingest_bcb_normativos.py  ingest_bcb_rss.py  ingest_cade.py  ingest_cmn_normativos.py  ingest_cvm.py  ingest_cvm_historico.py  ingest_datajud.py  ingest_laws_core.py  ingest_laws_financial.py  ingest_planalto_laws.py  ingest_susep.py  populate_analyses.py  run_seeds.py  test_analyzer.py
(+449 files in other folders)
